// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@financial-times/x-audio renders a default App player x-audio 1`] = `
<div
  className="styles_audio-player__2nupy styles_audio-player--minimised__ONFa_"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex="0"
>
  <button
    aria-label="Close this player."
    className="styles_audio-player__close__2lUat"
    onClick={[Function]}
  />
  <div
    className="styles_audio-player__info__series-name__2T-Wy"
    style={
      Object {
        "overflow": "hidden",
      }
    }
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "transform": "translate3d(-0px, 0, 0)",
          "whiteSpace": "nowrap",
          "willChange": "transform",
        }
      }
      title="FT News Briefing: Notre-Dame fire, Goldman slips, Netflix spend"
    >
      FT News Briefing: Notre-Dame fire, Goldman slips, Netflix spend
    </span>
  </div>
  <div
    className="styles_audio-player__info__remaining__2uHGl"
  >
    1 min remaining
  </div>
  <button
    aria-label="play"
    className="styles_audio-player__play-pause__3HvnM styles_audio-player__play-pause--play__3TyLp"
    onClick={[Function]}
  />
</div>
`;

exports[`@financial-times/x-gift-article renders a default Free article x-gift-article 1`] = `
<div
  className="GiftArticle_container__nGwU_"
>
  <form
    name="gift-form"
  >
    <fieldset
      className="o-forms GiftArticle_form__lC3qs"
    >
      <div
        className="GiftArticle_title__3wb0x GiftArticle_bold__Ys2Sp"
      >
        Share this article (free)
      </div>
      <div
        className="js-gift-article__url-section GiftArticle_url-section__Bsa7N"
        data-section-id="nonGiftLink"
        data-trackable="nonGiftLink"
      >
        <input
          className="o-forms__text GiftArticle_url__17SKH"
          disabled={false}
          name="non-gift-link"
          readOnly={true}
          type="text"
          value="https://www.ft.com/content/blahblahblah?shareType=nongift"
        />
        <div
          className="GiftArticle_message__2zqH2"
        >
          This article is currently 
          <span
            className="GiftArticle_bold__Ys2Sp"
          >
            free
          </span>
           for anyone to read
        </div>
        <div
          className="GiftArticle_buttons__SB7ql"
        >
          <a
            className="o-buttons o-buttons--primary o-buttons--big"
            href="mailto:?subject=Title%20Title%20Title%20Title&body=https%3A%2F%2Fwww.ft.com%2Fcontent%2Fblahblahblah%3FshareType%3Dnongift"
            onClick={[Function]}
            rel="noopener noreferrer"
            target="_blank"
          >
            Email link
          </a>
        </div>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`@financial-times/x-gift-article renders a default With a bad response from membership APIs x-gift-article 1`] = `
<div
  className="GiftArticle_container__nGwU_"
>
  <form
    name="gift-form"
  >
    <fieldset
      className="o-forms GiftArticle_form__lC3qs"
    >
      <div
        className="GiftArticle_title__3wb0x GiftArticle_bold__Ys2Sp"
      >
        Share this article (unable to fetch credits)
      </div>
      <div
        className="o-forms__group o-forms__group--inline GiftArticle_radio-button-section__h1-xz"
      >
        <input
          checked={true}
          className="o-forms__radio"
          id="giftLink"
          name="gift-form__radio"
          onChange={[Function]}
          type="radio"
          value="giftLink"
        />
        <label
          className="o-forms__label"
          htmlFor="giftLink"
        >
          with 
          <span
            className="GiftArticle_bold__Ys2Sp"
          >
            anyone
          </span>
           (uses 1 gift credit)
        </label>
        <input
          checked={false}
          className="o-forms__radio"
          id="nonGiftLink"
          name="gift-form__radio"
          onChange={[Function]}
          type="radio"
          value="nonGiftLink"
        />
        <label
          className="o-forms__label"
          htmlFor="nonGiftLink"
        >
          with 
          <span
            className="GiftArticle_bold__Ys2Sp"
          >
            other FT subscribers
          </span>
        </label>
      </div>
      <div
        className="js-gift-article__url-section GiftArticle_url-section__Bsa7N"
        data-section-id="giftLink"
        data-trackable="giftLink"
      >
        <input
          className="o-forms__text GiftArticle_url__17SKH"
          disabled={true}
          name="example-gift-link"
          readOnly={true}
          type="text"
          value="https://on.ft.com/gift_link"
        />
        <div
          className="GiftArticle_message__2zqH2"
        >
          You have 
          <span
            className="GiftArticle_bold__Ys2Sp"
          >
             gift article 
            credits
          </span>
           left this month
        </div>
        <div
          className="GiftArticle_buttons__SB7ql"
        >
          <button
            className="o-buttons o-buttons--primary o-buttons--big"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Create gift link
          </button>
        </div>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`@financial-times/x-gift-article renders a default With gift credits x-gift-article 1`] = `
<div
  className="GiftArticle_container__nGwU_"
>
  <form
    name="gift-form"
  >
    <fieldset
      className="o-forms GiftArticle_form__lC3qs"
    >
      <div
        className="GiftArticle_title__3wb0x GiftArticle_bold__Ys2Sp"
      >
        Share this article (with credit)
      </div>
      <div
        className="o-forms__group o-forms__group--inline GiftArticle_radio-button-section__h1-xz"
      >
        <input
          checked={true}
          className="o-forms__radio"
          id="giftLink"
          name="gift-form__radio"
          onChange={[Function]}
          type="radio"
          value="giftLink"
        />
        <label
          className="o-forms__label"
          htmlFor="giftLink"
        >
          with 
          <span
            className="GiftArticle_bold__Ys2Sp"
          >
            anyone
          </span>
           (uses 1 gift credit)
        </label>
        <input
          checked={false}
          className="o-forms__radio"
          id="nonGiftLink"
          name="gift-form__radio"
          onChange={[Function]}
          type="radio"
          value="nonGiftLink"
        />
        <label
          className="o-forms__label"
          htmlFor="nonGiftLink"
        >
          with 
          <span
            className="GiftArticle_bold__Ys2Sp"
          >
            other FT subscribers
          </span>
        </label>
      </div>
      <div
        className="js-gift-article__url-section GiftArticle_url-section__Bsa7N"
        data-section-id="giftLink"
        data-trackable="giftLink"
      >
        <input
          className="o-forms__text GiftArticle_url__17SKH"
          disabled={true}
          name="example-gift-link"
          readOnly={true}
          type="text"
          value="https://on.ft.com/gift_link"
        />
        <div
          className="GiftArticle_message__2zqH2"
        >
          You have 
          <span
            className="GiftArticle_bold__Ys2Sp"
          >
             gift article 
            credits
          </span>
           left this month
        </div>
        <div
          className="GiftArticle_buttons__SB7ql"
        >
          <button
            className="o-buttons o-buttons--primary o-buttons--big"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Create gift link
          </button>
        </div>
      </div>
    </fieldset>
  </form>
  <div
    className="o-share o-share--inverse MobileShareButtons_container__3eAtc"
    data-o-component="o-share"
  >
    <div
      className="GiftArticle_title__3wb0x GiftArticle_bold__Ys2Sp"
    >
      Share on Social
    </div>
    <ul>
      <li
        className="o-share__action MobileShareButtons_button__17W-1"
        data-share="facebook"
      >
        <a
          className="o-share__icon o-share__icon--facebook MobileShareButtons_facebook__1ji2o"
          data-trackable="facebook"
          href="http://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.ft.com%2Fcontent%2Fblahblahblah&t=Title%20Title%20Title%20Title"
          rel="noopener"
        >
          Facebook 
          <span
            className="o-share__text"
          >
            (opens new window)
          </span>
        </a>
      </li>
      <li
        className="o-share__action MobileShareButtons_button__17W-1"
        data-share="twitter"
      >
        <a
          className="o-share__icon o-share__icon--twitter MobileShareButtons_twitter__1QRsw"
          data-trackable="twitter"
          href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fwww.ft.com%2Fcontent%2Fblahblahblah&text=Title%20Title%20Title%20Title&via=financialtimes"
          rel="noopener"
        >
          Twitter 
          <span
            className="o-share__text"
          >
            (opens new window)
          </span>
        </a>
      </li>
      <li
        className="o-share__action MobileShareButtons_button__17W-1"
        data-share="linkedin"
      >
        <a
          className="o-share__icon o-share__icon--linkedin MobileShareButtons_linkedin__1-2-Y"
          data-trackable="linkedin"
          href="http://www.linkedin.com/shareArticle?mini=true&url=https%3A%2F%2Fwww.ft.com%2Fcontent%2Fblahblahblah&title=Title%20Title%20Title%20Title&source=Financial+Times"
          rel="noopener"
        >
          LinkedIn 
          <span
            className="o-share__text"
          >
            (opens new window)
          </span>
        </a>
      </li>
      <li
        className="o-share__action MobileShareButtons_button__17W-1 o-share__action--whatsapp"
        data-share="whatsapp"
      >
        <a
          className="o-share__icon o-share__icon--whatsapp MobileShareButtons_whatsapp__16VoZ"
          data-trackable="whatsapp"
          href="whatsapp://send?text=Title%20Title%20Title%20Title%20-%20https%3A%2F%2Fwww.ft.com%2Fcontent%2Fblahblahblah"
          rel="noopener"
        >
          Whatsapp 
          <span
            className="o-share__text"
          >
            (opens new window)
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`@financial-times/x-gift-article renders a default With native share on App x-gift-article 1`] = `
<div
  className="GiftArticle_container__nGwU_"
>
  <form
    name="gift-form"
  >
    <fieldset
      className="o-forms GiftArticle_form__lC3qs"
    >
      <div
        className="GiftArticle_title__3wb0x GiftArticle_bold__Ys2Sp"
      >
        Share this article (on App)
      </div>
      <div
        className="o-forms__group o-forms__group--inline GiftArticle_radio-button-section__h1-xz"
      >
        <input
          checked={true}
          className="o-forms__radio"
          id="giftLink"
          name="gift-form__radio"
          onChange={[Function]}
          type="radio"
          value="giftLink"
        />
        <label
          className="o-forms__label"
          htmlFor="giftLink"
        >
          with 
          <span
            className="GiftArticle_bold__Ys2Sp"
          >
            anyone
          </span>
           (uses 1 gift credit)
        </label>
        <input
          checked={false}
          className="o-forms__radio"
          id="nonGiftLink"
          name="gift-form__radio"
          onChange={[Function]}
          type="radio"
          value="nonGiftLink"
        />
        <label
          className="o-forms__label"
          htmlFor="nonGiftLink"
        >
          with 
          <span
            className="GiftArticle_bold__Ys2Sp"
          >
            other FT subscribers
          </span>
        </label>
      </div>
      <div
        className="js-gift-article__url-section GiftArticle_url-section__Bsa7N"
        data-section-id="giftLink"
        data-trackable="giftLink"
      >
        <input
          className="o-forms__text GiftArticle_url__17SKH"
          disabled={true}
          name="example-gift-link"
          readOnly={true}
          type="text"
          value="https://on.ft.com/gift_link"
        />
        <div
          className="GiftArticle_message__2zqH2"
        >
          You have 
          <span
            className="GiftArticle_bold__Ys2Sp"
          >
             gift article 
            credits
          </span>
           left this month
        </div>
        <div
          className="GiftArticle_buttons__SB7ql"
        >
          <button
            className="o-buttons o-buttons--primary o-buttons--big"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Create gift link
          </button>
        </div>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`@financial-times/x-gift-article renders a default Without gift credits x-gift-article 1`] = `
<div
  className="GiftArticle_container__nGwU_"
>
  <form
    name="gift-form"
  >
    <fieldset
      className="o-forms GiftArticle_form__lC3qs"
    >
      <div
        className="GiftArticle_title__3wb0x GiftArticle_bold__Ys2Sp"
      >
        Share this article (without credit)
      </div>
      <div
        className="o-forms__group o-forms__group--inline GiftArticle_radio-button-section__h1-xz"
      >
        <input
          checked={true}
          className="o-forms__radio"
          id="giftLink"
          name="gift-form__radio"
          onChange={[Function]}
          type="radio"
          value="giftLink"
        />
        <label
          className="o-forms__label"
          htmlFor="giftLink"
        >
          with 
          <span
            className="GiftArticle_bold__Ys2Sp"
          >
            anyone
          </span>
           (uses 1 gift credit)
        </label>
        <input
          checked={false}
          className="o-forms__radio"
          id="nonGiftLink"
          name="gift-form__radio"
          onChange={[Function]}
          type="radio"
          value="nonGiftLink"
        />
        <label
          className="o-forms__label"
          htmlFor="nonGiftLink"
        >
          with 
          <span
            className="GiftArticle_bold__Ys2Sp"
          >
            other FT subscribers
          </span>
        </label>
      </div>
      <div
        className="js-gift-article__url-section GiftArticle_url-section__Bsa7N"
        data-section-id="giftLink"
        data-trackable="giftLink"
      >
        <input
          className="o-forms__text GiftArticle_url__17SKH"
          disabled={true}
          name="example-gift-link"
          readOnly={true}
          type="text"
          value="https://on.ft.com/gift_link"
        />
        <div
          className="GiftArticle_message__2zqH2"
        >
          You have 
          <span
            className="GiftArticle_bold__Ys2Sp"
          >
             gift article 
            credits
          </span>
           left this month
        </div>
        <div
          className="GiftArticle_buttons__SB7ql"
        >
          <button
            className="o-buttons o-buttons--primary o-buttons--big"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Create gift link
          </button>
        </div>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`@financial-times/x-podcast-launchers renders a default Example x-podcast-launchers 1`] = `
<div
  className="PodcastLaunchers_container__1418-"
  data-trackable="podcast-launchers"
>
  <h2
    className="PodcastLaunchers_heading__1103H"
  >
    Subscribe on a podcast app
  </h2>
  <ul
    className="PodcastLaunchers_podcastAppLinksWrapper__7W6dn"
  >
    <li>
      <a
        className="o-buttons o-buttons--primary o-buttons--big PodcastLaunchers_podcastAppLink__69RMR"
        data-trackable="apple-podcasts"
        href="podcast://access.acast.com/rss/therachmanreview/abc-123"
      >
        Apple Podcasts
      </a>
    </li>
    <li>
      <a
        className="o-buttons o-buttons--primary o-buttons--big PodcastLaunchers_podcastAppLink__69RMR"
        data-trackable="overcast"
        href="overcast://x-callback-url/add?url=https://access.acast.com/rss/therachmanreview/abc-123"
      >
        Overcast
      </a>
    </li>
    <li>
      <a
        className="o-buttons o-buttons--primary o-buttons--big PodcastLaunchers_podcastAppLink__69RMR"
        data-trackable="pocket-casts"
        href="pktc://subscribe/access.acast.com/rss/therachmanreview/abc-123"
      >
        Pocket Casts
      </a>
    </li>
    <li>
      <a
        className="o-buttons o-buttons--primary o-buttons--big PodcastLaunchers_podcastAppLink__69RMR"
        data-trackable="podcast-addict"
        href="podcastaddict://access.acast.com/rss/therachmanreview/abc-123"
      >
        Podcast Addict
      </a>
    </li>
    <li>
      <a
        className="o-buttons o-buttons--primary o-buttons--big PodcastLaunchers_podcastAppLink__69RMR"
        data-trackable="acast"
        href="acast://subscribe/https://access.acast.com/rss/therachmanreview/abc-123"
      >
        Acast
      </a>
    </li>
    <li
      className="o-forms__affix-wrapper PodcastLaunchers_rssUrlWrapper__vc1zt"
    >
      <input
        className="o-forms__text PodcastLaunchers_rssUrlInput__O7wL-"
        readOnly={true}
        type="text"
        value="https://access.acast.com/rss/therachmanreview/abc-123"
      />
      <div
        className="o-forms__suffix PodcastLaunchers_rssUrlCopyButton__2_4c0"
      >
        <button
          className="o-buttons o-buttons--primary o-buttons--big"
          data-trackable="copy-rss"
          data-url="https://access.acast.com/rss/therachmanreview/abc-123"
          onClick={[Function]}
          type="button"
        >
          Copy RSS
        </button>
      </div>
    </li>
  </ul>
  <h2
    className="PodcastLaunchers_heading__1103H"
  >
    Can’t see your podcast app?
  </h2>
  <form
    action="/__myft/api/core/followed/concept/e0f2acb4-4177-436d-a783-b8c80ec2a6ac?method=put"
    data-concept-id="e0f2acb4-4177-436d-a783-b8c80ec2a6ac"
    method="GET"
    onSubmit={[Function]}
  >
    <input
      data-myft-csrf-token={true}
      name="token"
      type="hidden"
      value="token"
    />
    <button
      aria-label="Add Rachman Review to myFT"
      aria-pressed="false"
      className="main_button__3Mk67"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Add to myFT",
        }
      }
      data-concept-id="e0f2acb4-4177-436d-a783-b8c80ec2a6ac"
      data-trackable="follow"
      data-trackable-context-messaging={null}
      title="Add Rachman Review to myFT"
      type="submit"
    />
  </form>
</div>
`;

exports[`@financial-times/x-styling-demo renders a default Styling x-styling-demo 1`] = `
<button
  className="Button_button__vS7Mv"
>
  Click me!
</button>
`;
